<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativelayout_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/textview_app_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:justificationMode="inter_word"
            android:text="@string/app_name"
            android:textColor="@color/colorWhite"
            android:textSize="15dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:background="@drawable/bg_edittext"
            android:backgroundTint="@color/colorPrimary"
            android:padding="10dp"
            android:text="Logout"
            android:textColor="#FFF" />
    </RelativeLayout>

    <TextView
        android:id="@+id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relativelayout_header"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:justificationMode="inter_word"
        android:text="@string/text1"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/text2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text1"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:justificationMode="inter_word"
        android:text="@string/text2"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:justificationMode="inter_word"
        android:text="@string/text3"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text3"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:justificationMode="inter_word"
        android:text="@string/text4"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/text5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text4"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:justificationMode="inter_word"
        android:text="@string/text5"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <TextView
        android:id="@+id/text6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text5"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="15dp"
        android:justificationMode="inter_word"
        android:text="@string/text6"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <Button
        android:id="@+id/credit_card_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/bg_edittext"
        android:backgroundTint="@color/colorPrimary"
        android:text="Upload NACH"
        android:textColor="#fff"
        tools:ignore="HardcodedText" />
</RelativeLayout>
